# FiniteElementElec

./: .gitignore  README.md  elements.py  logger.py  peak_circle.py  peak_square.py  plotting.py  pointe.py  pyproject.toml  solver.py
doc/: biblio.bib  main.aux  main.bbl  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
example/: comparison.py  peak_circle.py  peak_square.py
fem_peak25/: elements.py  logger.py  plotting.py  solver.py
